--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
         </plugin>
 	<plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.19</version>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
         </plugin>
     </plugins>
 </build>
