--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 
 	<url>http://maven.apache.org</url>
 
+	<properties>
+		<!-- Define SonarQube scanner version -->
+		<sonar-maven-plugin.version>3.11.0.1845</sonar-maven-plugin.version>
+		<!-- Define Java version compatibility -->
+                <java.version>1.8</java.version>
+        </properties>
+
 	<dependencies>
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
@@ -49,7 +56,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.6.1</version>
+            <version>3.8.1</version>
             <configuration>
                 <source>1.8</source>
                 <target>1.8</target>
@@ -59,8 +66,13 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
             <version>3.3.1</version>
-        </plugin>
-    </plugins>
-</build>
-	
+         </plugin>
+         <!-- SonarQube scanner plugin configuration -->
+	 <plugin>
+	     <groupId>org.sonarsource.scanner.maven</groupId>
+	     <artifactId>sonar-maven-plugin</artifactId>
+	     <version>${sonar-maven-plugin.version}</version>
+         </plugin>
+  </plugin>
+</build
 </project>
